# ios-pre

./: .env.example  .gitignore  astro.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: generate-content.yml
docs/: README.md  code-standards.md  codebase-summary.md  leetcode-tracker-phase1.md  project-overview-pdr.md  system-architecture.md
pipeline/: __init__.py  config.py  main.py
pipeline/clients/: __init__.py  chroma_client.py  claude_client.py  gemini_client.py
pipeline/embeddings/: __init__.py  chunker.py  embedder.py  indexer.py
pipeline/generation/: __init__.py  code_verifier.py  flashcard_generator.py  models.py  prompts.py
pipeline/scrapers/: __init__.py  apple_docs_scraper.py  base_scraper.py  hws_scraper.py  kodeco_scraper.py  models.py  objcio_scraper.py  swift_org_scraper.py  swiftlee_scraper.py
pipeline/scripts/: add-summaries-to-flashcards.py  add-summaries-to-src-flashcards.py
pipeline/utils/: logging.py
pipeline/verification/: __init__.py  duplicate_detector.py  link_validator.py  quality_filter.py  report_generator.py
plans/260107-1710-ios-content-generation-pipeline/: phase-01-infrastructure-setup.md  phase-02-source-scrapers.md  phase-03-embedding-pipeline.md  phase-04-rag-generation.md  phase-05-verification-layer.md  phase-06-github-actions.md  plan.md
plans/260108-1838-leetcode-tracker-enhancement/: phase-01-search-filter.md  phase-02-statistics-charts.md  phase-03-ux-improvements.md  plan.md
plans/260109-1137-leetcode-topic-suggestions/: plan.md  (+2 more)
public/: manifest.json  sw.js
(+102 files in other folders)
